[package]
name = "empre"
version = "0.1.0"
edition = "2021"
authors = ["Leo Lahti leo.lahti1@gmail.com"]
license = "Apache-2.0"
keywords = ["electromagnetism", "field", "maxwell", "greens function"]
categories = ["mathematics", "science"]
rust-version = "1.75"
description = "Antenna and microwave engineering focused elecromagnetic prelude"

[dependencies]
# faer = {version = "0.19.2", optional = true}
faer = { path = "../faer-rs", optional = true }
nalgebra = {version = "0.33.0", optional = true}
ndarray = "0.16.1"
num = "0.4.3"

[features]
default = ["faer", "nalgebra"]
faer = ["dep:faer"]
dumdiv = []
nalgebra = ["dep:nalgebra"]
